# Yaad

./: README.md  blueprint.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer_hooks.nsi
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  parser.rs  worker.rs
src/components/: AddBar.tsx  ConfirmDialog.tsx  Header.tsx  Modal.tsx  Onboarding.tsx  ParseToken.tsx  ProgressBar.tsx  ReminderCard.tsx  ReminderList.tsx  SettingsModal.tsx  SnoozeModal.tsx  Tabs.tsx  Titlebar.tsx  Toast.tsx  YaadLogo.css  YaadLogo.tsx  icons.tsx
src/components/ui/: alert.tsx
src/hooks/: useReminders.ts
src/lib/: audio.ts  call-handler.ts  date.ts  toast.ts  types.ts
