[package]
name = "yaad"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yaad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
honker = { version = "0.3.3", features = ["bundled-sqlite"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.39", features = ["serde"] }
ulid = { version = "1.1.4", features = ["serde"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tauri-plugin-notification = "2.0.0"
regex = "1.12.3"
